--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>819</width>
-    <height>593</height>
+    <width>1024</width>
+    <height>768</height>
    </rect>
   </property>
   <property name="cursor">
@@ -25,7 +25,235 @@
     <selectedoff>../images/ivao.jpg</selectedoff>
     <selectedon>../images/ivao.jpg</selectedon>../images/ivao.jpg</iconset>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QTabWidget" name="tabWidget">
+    <property name="geometry">
+     <rect>
+      <x>4</x>
+      <y>30</y>
+      <width>1015</width>
+      <height>718</height>
+     </rect>
+    </property>
+    <property name="currentIndex">
+     <number>0</number>
+    </property>
+    <widget class="QWidget" name="main">
+     <attribute name="title">
+      <string>Main</string>
+     </attribute>
+    </widget>
+    <widget class="QWidget" name="countries">
+     <attribute name="title">
+      <string>Countries</string>
+     </attribute>
+     <widget class="QComboBox" name="country_list">
+      <property name="geometry">
+       <rect>
+        <x>11</x>
+        <y>4</y>
+        <width>111</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="currentIndex">
+       <number>-1</number>
+      </property>
+      <item>
+       <property name="text">
+        <string>Cuba</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QTableView" name="ATCtableView">
+      <property name="geometry">
+       <rect>
+        <x>8</x>
+        <y>30</y>
+        <width>991</width>
+        <height>161</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QTableView" name="PilottableView">
+      <property name="geometry">
+       <rect>
+        <x>8</x>
+        <y>210</y>
+        <width>991</width>
+        <height>471</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="atc_label">
+      <property name="geometry">
+       <rect>
+        <x>535</x>
+        <y>13</y>
+        <width>41</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>ATC List</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="pilot_list">
+      <property name="geometry">
+       <rect>
+        <x>530</x>
+        <y>193</y>
+        <width>61</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>PILOT List</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="controllers">
+     <attribute name="title">
+      <string>Controllers</string>
+     </attribute>
+     <widget class="QTableView" name="ATC_FullList">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>1006</width>
+        <height>683</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="pilots">
+     <attribute name="title">
+      <string>Pilots</string>
+     </attribute>
+     <widget class="QTableView" name="PILOT_FullList">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>1006</width>
+        <height>687</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="observers">
+     <attribute name="title">
+      <string>Observers</string>
+     </attribute>
+    </widget>
+    <widget class="QWidget" name="database">
+     <attribute name="title">
+      <string>Database</string>
+     </attribute>
+    </widget>
+    <widget class="QWidget" name="actual_user">
+     <attribute name="title">
+      <string>Actual User</string>
+     </attribute>
+     <widget class="QTableView" name="InboundTableView">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>20</y>
+        <width>1006</width>
+        <height>193</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="Inbound_traffic">
+      <property name="geometry">
+       <rect>
+        <x>444</x>
+        <y>4</y>
+        <width>91</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Inbound Traffic</string>
+      </property>
+     </widget>
+     <widget class="QTableView" name="OutboundTableView">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>227</y>
+        <width>1006</width>
+        <height>192</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="outbound_traffic">
+      <property name="geometry">
+       <rect>
+        <x>444</x>
+        <y>211</y>
+        <width>101</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Outbound Traffic</string>
+      </property>
+     </widget>
+     <widget class="QTableView" name="NearbyATCViewTable">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>435</y>
+        <width>1006</width>
+        <height>192</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="nearby_controllers">
+      <property name="geometry">
+       <rect>
+        <x>434</x>
+        <y>419</y>
+        <width>111</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Nearby Controllers</string>
+      </property>
+     </widget>
+    </widget>
+   </widget>
+   <widget class="QPushButton" name="UpdateBtn">
+    <property name="geometry">
+     <rect>
+      <x>7</x>
+      <y>3</y>
+      <width>92</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Update</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="ExitBtn">
+    <property name="geometry">
+     <rect>
+      <x>107</x>
+      <y>3</y>
+      <width>92</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Exit</string>
+    </property>
+   </widget>
+  </widget>
  </widget>
  <resources/>
  <connections/>
