--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -175,7 +175,7 @@
       <property name="geometry">
        <rect>
         <x>470</x>
-        <y>4</y>
+        <y>6</y>
         <width>51</width>
         <height>16</height>
        </rect>
@@ -243,6 +243,51 @@
        <string>METAR</string>
       </property>
      </widget>
+     <widget class="QComboBox" name="SearchcomboBox">
+      <property name="geometry">
+       <rect>
+        <x>90</x>
+        <y>270</y>
+        <width>80</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <item>
+       <property name="text">
+        <string>CallSign</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>VID</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Name</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QLineEdit" name="SearchEdit">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>270</y>
+        <width>113</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="METAREdit">
+      <property name="geometry">
+       <rect>
+        <x>520</x>
+        <y>270</y>
+        <width>61</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="countries">
      <attribute name="title">
@@ -251,20 +296,15 @@
      <widget class="QComboBox" name="country_list">
       <property name="geometry">
        <rect>
-        <x>11</x>
-        <y>4</y>
-        <width>111</width>
-        <height>24</height>
+        <x>9</x>
+        <y>6</y>
+        <width>215</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="currentIndex">
        <number>-1</number>
       </property>
-      <item>
-       <property name="text">
-        <string>Cuba</string>
-       </property>
-      </item>
      </widget>
      <widget class="QTableView" name="ATCtableView">
       <property name="geometry">
@@ -347,11 +387,41 @@
      <attribute name="title">
       <string>Observers</string>
      </attribute>
+     <widget class="QTableView" name="ObservertableView">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>991</width>
+        <height>661</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="database">
      <attribute name="title">
       <string>Database</string>
      </attribute>
+     <widget class="QTableView" name="tableView">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>40</y>
+        <width>481</width>
+        <height>641</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QTableView" name="tableView_2">
+      <property name="geometry">
+       <rect>
+        <x>500</x>
+        <y>40</y>
+        <width>501</width>
+        <height>641</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="actual_user">
      <attribute name="title">
