--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -35,6 +35,9 @@
       <height>711</height>
      </rect>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
     <property name="currentIndex">
      <number>0</number>
     </property>
@@ -302,11 +305,14 @@
         <height>20</height>
        </rect>
       </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="currentIndex">
        <number>-1</number>
       </property>
      </widget>
-     <widget class="QTableView" name="ATCtableView">
+     <widget class="QTableWidget" name="ATCtableWidget">
       <property name="geometry">
        <rect>
         <x>8</x>
@@ -315,6 +321,63 @@
         <height>161</height>
        </rect>
       </property>
+      <property name="cursor" stdset="0">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
+      <property name="autoScrollMargin">
+       <number>16</number>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>false</bool>
+      </property>
+      <property name="showGrid">
+       <bool>true</bool>
+      </property>
+      <property name="rowCount">
+       <number>0</number>
+      </property>
+      <property name="columnCount">
+       <number>6</number>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>100</number>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>30</number>
+      </attribute>
+      <column>
+       <property name="text">
+        <string>VID</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Country</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Facility</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Frequency</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Realname</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Category</string>
+       </property>
+      </column>
      </widget>
      <widget class="QTableView" name="PilottableView">
       <property name="geometry">
@@ -325,15 +388,21 @@
         <height>471</height>
        </rect>
       </property>
+      <property name="cursor" stdset="0">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
      </widget>
      <widget class="QLabel" name="atc_label">
       <property name="geometry">
        <rect>
-        <x>535</x>
+        <x>464</x>
         <y>13</y>
         <width>51</width>
         <height>16</height>
        </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
       </property>
       <property name="text">
        <string>ATC List</string>
@@ -342,11 +411,14 @@
      <widget class="QLabel" name="pilot_list">
       <property name="geometry">
        <rect>
-        <x>530</x>
+        <x>461</x>
         <y>193</y>
         <width>61</width>
         <height>16</height>
        </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
       </property>
       <property name="text">
        <string>PILOT List</string>
@@ -405,9 +477,9 @@
      <widget class="QTableView" name="tableView">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>6</x>
         <y>40</y>
-        <width>481</width>
+        <width>485</width>
         <height>641</height>
        </rect>
       </property>
@@ -507,6 +579,9 @@
       <height>24</height>
      </rect>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
     <property name="text">
      <string>Update</string>
     </property>
@@ -520,6 +595,9 @@
       <height>24</height>
      </rect>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
     <property name="text">
      <string>Exit</string>
     </property>
@@ -532,6 +610,9 @@
       <width>101</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
      <string>Ready</string>
