--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -51,7 +51,7 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>92</x>
+        <x>110</x>
         <y>657</y>
         <width>51</width>
         <height>23</height>
@@ -70,7 +70,7 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>202</x>
+        <x>208</x>
         <y>656</y>
         <width>51</width>
         <height>23</height>
@@ -89,7 +89,7 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>320</x>
+        <x>327</x>
         <y>656</y>
         <width>51</width>
         <height>23</height>
@@ -105,11 +105,17 @@
      <widget class="QLabel" name="TotalPlayers_label">
       <property name="geometry">
        <rect>
-        <x>19</x>
-        <y>660</y>
-        <width>71</width>
+        <x>16</x>
+        <y>658</y>
+        <width>91</width>
         <height>20</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>Total Players</string>
@@ -118,11 +124,17 @@
      <widget class="QLabel" name="TotalAtc_label">
       <property name="geometry">
        <rect>
-        <x>176</x>
-        <y>660</y>
+        <x>179</x>
+        <y>658</y>
         <width>31</width>
         <height>20</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>ATC</string>
@@ -131,11 +143,17 @@
      <widget class="QLabel" name="TotalPilots_label">
       <property name="geometry">
        <rect>
-        <x>282</x>
-        <y>660</y>
+        <x>285</x>
+        <y>658</y>
         <width>41</width>
         <height>20</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>Pilots</string>
@@ -156,9 +174,15 @@
        <rect>
         <x>11</x>
         <y>5</y>
-        <width>71</width>
+        <width>91</width>
         <height>16</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>IVAO Status</string>
@@ -183,6 +207,12 @@
         <height>16</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="text">
        <string>Friends</string>
       </property>
@@ -192,9 +222,15 @@
        <rect>
         <x>13</x>
         <y>254</y>
-        <width>91</width>
+        <width>101</width>
         <height>16</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>Search Clients</string>
@@ -213,11 +249,17 @@
      <widget class="QLabel" name="SearchForLabel">
       <property name="geometry">
        <rect>
-        <x>13</x>
-        <y>273</y>
+        <x>12</x>
+        <y>271</y>
         <width>81</width>
         <height>16</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>Search For:</string>
@@ -238,9 +280,15 @@
        <rect>
         <x>473</x>
         <y>272</y>
-        <width>81</width>
+        <width>51</width>
         <height>16</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>METAR</string>
@@ -249,7 +297,7 @@
      <widget class="QComboBox" name="SearchcomboBox">
       <property name="geometry">
        <rect>
-        <x>90</x>
+        <x>95</x>
         <y>270</y>
         <width>80</width>
         <height>20</height>
@@ -274,7 +322,7 @@
      <widget class="QLineEdit" name="SearchEdit">
       <property name="geometry">
        <rect>
-        <x>170</x>
+        <x>175</x>
         <y>270</y>
         <width>113</width>
         <height>20</height>
@@ -397,9 +445,15 @@
        <rect>
         <x>464</x>
         <y>13</y>
-        <width>51</width>
+        <width>61</width>
         <height>16</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="cursor">
        <cursorShape>PointingHandCursor</cursorShape>
@@ -413,9 +467,15 @@
        <rect>
         <x>461</x>
         <y>193</y>
-        <width>61</width>
+        <width>71</width>
         <height>16</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="cursor">
        <cursorShape>PointingHandCursor</cursorShape>
@@ -512,11 +572,17 @@
      <widget class="QLabel" name="Inbound_traffic">
       <property name="geometry">
        <rect>
-        <x>444</x>
+        <x>435</x>
         <y>4</y>
-        <width>91</width>
+        <width>111</width>
         <height>20</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>Inbound Traffic</string>
@@ -535,11 +601,17 @@
      <widget class="QLabel" name="outbound_traffic">
       <property name="geometry">
        <rect>
-        <x>444</x>
+        <x>431</x>
         <y>211</y>
-        <width>101</width>
+        <width>121</width>
         <height>20</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>Outbound Traffic</string>
@@ -563,6 +635,12 @@
         <width>111</width>
         <height>20</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>Nearby Controllers</string>
@@ -610,6 +688,12 @@
       <width>101</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
