* Add Ratings and Positions
	+ Added rating for controllers
	+ Added positions for controllers
	+ Added rating for pilots
	+ Fix selectrow in PilotFullList

--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -959,6 +959,12 @@
       <property name="alternatingRowColors">
        <bool>true</bool>
       </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
       <property name="gridStyle">
        <enum>Qt::DotLine</enum>
       </property>
