* Add total of Observers at Information Board
	+ Fix typo error in columns 'Callsign'

--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -263,7 +263,7 @@
       </column>
       <column>
        <property name="text">
-        <string>Callsing</string>
+        <string>Callsign</string>
        </property>
       </column>
       <column>
@@ -374,7 +374,7 @@
       </column>
       <column>
        <property name="text">
-        <string>Callsing</string>
+        <string>Callsign</string>
        </property>
       </column>
       <column>
