* Setting better import PyQt4 to write less code
	- Inserting Map tabwidget to try setting player in the map
	  THIS IS THE HARD PART (i guees for me)

--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -955,6 +955,11 @@
       </column>
      </widget>
     </widget>
+    <widget class="QWidget" name="map">
+     <attribute name="title">
+      <string>Map</string>
+     </attribute>
+    </widget>
     <widget class="QWidget" name="controllers">
      <attribute name="title">
       <string>Controllers</string>
@@ -1562,9 +1567,7 @@
    </property>
   </action>
  </widget>
- <resources>
-  <include location="../airlines/ivao.jpg"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>actionExit</sender>
